# api_project

./: README.md  library.db  main.py  pylint.txt  pyproject.toml  requirements.txt
app/: main.py
app/core/: security.py
app/dbs/: database.py  session.py
app/models/: models.py
app/routes/: movie.py  user.py
app/schemas/: schemas.py
models/: models.py
routes/: movie.py  user.py
schemas/: schemas.py
tests/: main_test.py
